rest/rest-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /flask-app(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: flask-app-service
            port:
              number: 5000
